Chore: add OpenApi encoded (#26)
